# vyrii

./: .gitignore  IMPLEMENTATION.md  MIRROR_CONCEPT.md  MultiUser_concept.md  README.md  pyproject.toml  vyrii_auto.bat  vyrii_auto_api.bat  vyrii_auto_api.sh
design/: design1_minimal.html  design2_terminal.html  design3_bubbles.html  design4_sidebar.html
vyrii/: __main__.py  adapter.py  api.py  app.py  ctxtimer.py  ctxwindow.py  engine.py  flask_api.py  history.py  i18n.py  mcp_client.py  parallel.py  roles.py  scheduler.py  stats.py  tools.py
vyrii/ctxtimer_data/: base_prompt.txt
vyrii/flows/: deepagent_md.py  deobfuscate.py  glossary.py  history.py  obfuscate.py  scan.py  webanalys.py  webask.py  webcrawl.py  webindex.py
vyrii/ui/: app.js  i18n.js  index.html  style.css
vyrii/ui/themes/: beach.css  dark.css  light.css  mono-dark.css  mono-light.css  ocean.css  soft.css  summer.css
