[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vyrii"
version = "0.1.1"
description = "Local AI web UI — chat, translate, web research, deep document generation, RAG, and file management via Gradio. Powered by Ollama or any OpenAI-compatible backend."
requires-python = ">=3.10"
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
    "gradio>=6.0",
    "requests>=2.28",
    "lxml>=4.9",
]

[project.optional-dependencies]
html = ["lxml_html_clean"]
api  = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]

[project.urls]
Homepage   = "https://github.com/szholobetsky/vyrii"
Repository = "https://github.com/szholobetsky/vyrii"

[project.scripts]
vyrii = "vyrii.__main__:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"vyrii" = ["**/*"]
